# finding-mcp

./: .gitignore  README.md  install-gemini.sh  install.sh  pyproject.toml  run.sh
src/finding_mcp/: config.py  ctags_index.py  framework_detect.py  languages.py  models.py  ripgrep.py  semgrep.py  server.py  tools_meta.py  tools_routes.py  tools_search.py  tools_structure.py  tools_symbols.py  tools_taint.py  treesitter_index.py
src/finding_mcp/analyzers/: framework_detect.py  semgrep.py
src/finding_mcp/core/: git_utils.py  ripgrep.py
src/finding_mcp/indexers/: ctags.py  treesitter.py
src/finding_mcp/route_extractors/: __init__.py  express.py  laravel.py  spring.py
src/finding_mcp/rules/: java_spring_taint.yaml  js_taint.yaml  php_taint.yaml
src/finding_mcp/tools/: hunting.py  meta.py  routes.py  search.py  structure.py  symbols.py  taint.py
tests/: test_hunting.py  test_routes.py  test_smoke.py
tests/vuln-ecommerce-lab/: README.md
tests/vuln-ecommerce-lab/backend/: pom.xml
tests/vuln-ecommerce-lab/frontend/: index.html  package-lock.json  package.json  tailwind.config.js
tests/vuln-ecommerce-lab/scanner/: .env.example  main.py  pyproject.toml  requirements.txt  setup.py
tests/vuln-ecommerce-lab/scanner/agents/: base_agent.py  business_logic_agent.py  idor_agent.py  llm_prompts.py  missing_access_control_agent.py  orchestrator.py  parameter_tampering_agent.py  privilege_escalation_agent.py
tests/vuln-ecommerce-lab/scanner/config/: endpoints.py  settings.py  test_users.py
tests/vuln-ecommerce-lab/scanner/crawlers/: api_crawler.py  auth_crawler.py
tests/vuln-ecommerce-lab/scanner/models/: scan_context.py  vulnerability.py
tests/vuln-ecommerce-lab/scanner/reporters/: console_reporter.py  html_reporter.py  json_reporter.py  sarif_reporter.py
tests/vuln-ecommerce-lab/scanner/tests/: test_business_logic_agent.py  test_http_client.py  test_idor_agent.py  test_llm_client.py  test_parameter_agent.py
tests/vuln-ecommerce-lab/scanner/utils/: diff_analyzer.py  http_client.py  id_collector.py  llm_client.py
tests/vuln_shop/shop-front/: FRONTEND_VULNS.yaml  index.html  package-lock.json  package.json
tests/vuln_shop/vuln_shop/: README.md  requirements.txt  (+1 more)
(+230 files in other folders)
