[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "vuln-ecommerce-scanner"
version = "1.0.0"
description = "LLM-powered API vulnerability scanner for e-commerce applications"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "VulnScanner" }]

dependencies = [
    "httpx>=0.27.0",
    "openai>=1.30.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "click>=8.1.7",
    "rich>=13.7.0",
    "tenacity>=8.3.0",
    "python-dotenv>=1.0.1",
    "jinja2>=3.1.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
]

[project.scripts]
vuln-scanner = "scanner.main:main"

[tool.setuptools.packages.find]
where = [".."]
include = ["scanner*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["scanner"]
omit = ["scanner/tests/*"]
